Project migration with material design Concept
New files, themes,  layout , design

--- a/PeculiarSofts/PeculiarTuitionBase/PeculiarTuitionBase.csproj
+++ b/PeculiarSofts/PeculiarTuitionBase/PeculiarTuitionBase.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PeculiarBase.cs" />
+    <Compile Include="TuitionBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
