--- a/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
+++ b/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
@@ -87,6 +87,12 @@
     <Compile Include="MainMDI.Designer.cs">
       <DependentUpon>MainMDI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Master Module\frmEntityTypeMas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Master Module\frmEntityTypeMas.Designer.cs">
+      <DependentUpon>frmEntityTypeMas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Master Module\frmStudMas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transaction Module\frmPaymentMaster.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Transaction Module\frmPaymentMaster.Designer.cs">
+      <DependentUpon>frmPaymentMaster.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utility Module\frmChangeTheme.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainMDI.resx">
       <DependentUpon>MainMDI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Master Module\frmEntityTypeMas.resx">
+      <DependentUpon>frmEntityTypeMas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Master Module\frmStudMas.resx">
       <DependentUpon>frmStudMas.cs</DependentUpon>
@@ -150,6 +165,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Transaction Module\frmPaymentMaster.resx">
+      <DependentUpon>frmPaymentMaster.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Utility Module\frmChangeTheme.resx">
       <DependentUpon>frmChangeTheme.cs</DependentUpon>
     </EmbeddedResource>
@@ -168,7 +186,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Reports\" />
-    <Folder Include="Transaction Module\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
