--- a/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
+++ b/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
@@ -50,6 +50,9 @@
     <Reference Include="MaterialSkin">
       <HintPath>..\..\..\..\MaterialSkin\MaterialSkin\bin\Debug\MaterialSkin.dll</HintPath>
     </Reference>
+    <Reference Include="PeculiarTuitionBase">
+      <HintPath>..\PeculiarTuitionBase\bin\Debug\PeculiarTuitionBase.dll</HintPath>
+    </Reference>
     <Reference Include="Private.MyUserControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\Private.MyUserControls.dll</HintPath>
