Done for DAL with ODP

--- a/PeculiarSofts/PeculiarTuitionERP/App.config
+++ b/PeculiarSofts/PeculiarTuitionERP/App.config
@@ -1,6 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
+  </configSections>
+
+  <dataConfiguration defaultDatabase="HomePC" />
+
+  <connectionStrings>
+    <add name="HomePC" connectionString="Data Source=orcl;User ID=hr;Unicode=True;Load Balance Timeout=50;Password=oracle;pooling=true; max pool size = 150"
+        providerName="System.Data.OracleClient" />
+  </connectionStrings>
+
+  <appSettings>
+    <add key="TuitionBase" value="HomePC"/>
+  </appSettings>
 </configuration>
