--- a/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
+++ b/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PeculiarTuitionERP</RootNamespace>
     <AssemblyName>PeculiarTuitionERP</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -26,6 +26,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,10 +47,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>PeculiarTuitionERP.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MaterialSkin">
-      <HintPath>..\..\..\..\MaterialSkin\MaterialSkin\bin\Debug\MaterialSkin.dll</HintPath>
-    </Reference>
     <Reference Include="PeculiarTuitionBase">
       <HintPath>..\PeculiarTuitionBase\bin\Debug\PeculiarTuitionBase.dll</HintPath>
     </Reference>
@@ -111,12 +112,6 @@
     <Compile Include="Master Module\frmSubjectMas.Designer.cs">
       <DependentUpon>frmSubjectMas.cs</DependentUpon>
     </Compile>
-    <Compile Include="MaterialSkinTesting.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MaterialSkinTesting.Designer.cs">
-      <DependentUpon>MaterialSkinTesting.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction Module\frmPaymentMaster.cs">
@@ -124,12 +119,6 @@
     </Compile>
     <Compile Include="Transaction Module\frmPaymentMaster.Designer.cs">
       <DependentUpon>frmPaymentMaster.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Utility Module\frmChangeTheme.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Utility Module\frmChangeTheme.Designer.cs">
-      <DependentUpon>frmChangeTheme.cs</DependentUpon>
     </Compile>
     <Compile Include="Utility Module\Global.cs" />
     <Compile Include="Utility Module\Utility.cs" />
@@ -154,9 +143,6 @@
     <EmbeddedResource Include="Master Module\frmSubjectMas.resx">
       <DependentUpon>frmSubjectMas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MaterialSkinTesting.resx">
-      <DependentUpon>MaterialSkinTesting.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -165,12 +151,10 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Transaction Module\frmPaymentMaster.resx">
       <DependentUpon>frmPaymentMaster.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Utility Module\frmChangeTheme.resx">
-      <DependentUpon>frmChangeTheme.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
