--- a/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
+++ b/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
@@ -51,8 +51,9 @@
     <StartupObject>PeculiarTuitionERP.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PeculiarTuitionBase">
-      <HintPath>..\PeculiarTuitionBase\bin\Debug\PeculiarTuitionBase.dll</HintPath>
+    <Reference Include="PeculiarTuitionBase, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\PeculiarTuitionBase.dll</HintPath>
     </Reference>
     <Reference Include="Private.MyUserControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -81,6 +82,18 @@
     </Compile>
     <Compile Include="Exam Module\frmResultMas.Designer.cs">
       <DependentUpon>frmResultMas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmBaseChild.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBaseChild.Designer.cs">
+      <DependentUpon>frmBaseChild.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDashboard.Designer.cs">
+      <DependentUpon>frmDashboard.cs</DependentUpon>
     </Compile>
     <Compile Include="MainMDI.cs">
       <SubType>Form</SubType>
@@ -127,6 +140,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Exam Module\frmResultMas.resx">
       <DependentUpon>frmResultMas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBaseChild.resx">
+      <DependentUpon>frmBaseChild.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDashboard.resx">
+      <DependentUpon>frmDashboard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainMDI.resx">
       <DependentUpon>MainMDI.cs</DependentUpon>
