--- a/PeculiarSofts/PeculiarTuitionBase/PeculiarTuitionBase.csproj
+++ b/PeculiarSofts/PeculiarTuitionBase/PeculiarTuitionBase.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MasterBase\EmpMas.cs" />
     <Compile Include="MasterBase\EntityTypeMas.cs" />
     <Compile Include="MasterBase\StudMas.cs" />
     <Compile Include="TuitionBase.cs" />
