--- a/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
+++ b/PeculiarSofts/PeculiarTuitionERP/PeculiarTuitionERP.csproj
@@ -122,6 +122,12 @@
     <Compile Include="Master Module\frmStudMas.Designer.cs">
       <DependentUpon>frmStudMas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Master Module\frmStudyLevelMas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Master Module\frmStudyLevelMas.Designer.cs">
+      <DependentUpon>frmStudyLevelMas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Master Module\frmSubAlloc.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Master Module\frmStudMas.resx">
       <DependentUpon>frmStudMas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Master Module\frmStudyLevelMas.resx">
+      <DependentUpon>frmStudyLevelMas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Master Module\frmSubAlloc.resx">
       <DependentUpon>frmSubAlloc.cs</DependentUpon>
