Subject Master & Database Backup

--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,7 @@ _Pvt_Extensions/
 ModelManifest.xml
 /PeculiarSofts/PeculiarTuitionERP.sln
 /PeculiarSofts/PeculiarSofts.sln
+/PythonToolsLinks1/PythonToolsLinks1.sln
+/PythonToolsLinks1/PythonToolsLinks1/vslogo.png
+/PythonToolsLinks1/PythonToolsLinks1/PythonToolsLinks1.csproj
+/PythonToolsLinks1/PythonToolsLinks1/PythonTools.html
