Default Login Branch

--- a/PeculiarSofts/PeculiarTuitionERP/App.config
+++ b/PeculiarSofts/PeculiarTuitionERP/App.config
@@ -13,5 +13,6 @@
 
   <appSettings>
     <add key="TuitionBase" value="HomePC"/>
+    <add key ="Brach" value ="TestBranch"/>
   </appSettings>
 </configuration>
