Change in app config for default setting

--- a/PeculiarSofts/PeculiarTuitionERP/App.config
+++ b/PeculiarSofts/PeculiarTuitionERP/App.config
@@ -14,5 +14,7 @@
   <appSettings>
     <add key="TuitionBase" value="HomePC"/>
     <add key ="Brach" value ="TestBranch"/>
+    <add key ="DefaultUser" value ="TestUser"/>
+    <add key ="User" value ="ADMIN"/>
   </appSettings>
 </configuration>
