--- a/PeculiarSofts/PeculiarTuitionERP/App.config
+++ b/PeculiarSofts/PeculiarTuitionERP/App.config
@@ -13,8 +13,13 @@
 
   <appSettings>
     <add key="TuitionBase" value="HomePC"/>
-    <add key ="Brach" value ="TestBranch"/>
+    <add key ="Branch" value ="TestBranch"/>
     <add key ="DefaultUser" value ="TestUser"/>
     <add key ="User" value ="ADMIN"/>
+    <add key ="InsertErr" value="Problem in Inserting following :\n"/>
+    <add key ="UpdateErr" value="Problem in Updating following :\n"/>
+    <add key ="DeleteErr" value="Problem in Deleting following :\n"/>
+    <add key ="TimeStampErr" value="Timestamp Error :\n"/>
+    
   </appSettings>
 </configuration>
