--- a/PeculiarSofts/PeculiarTuitionERP/App.config
+++ b/PeculiarSofts/PeculiarTuitionERP/App.config
@@ -3,23 +3,31 @@
   <configSections>
     <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
   </configSections>
-
   <dataConfiguration defaultDatabase="HomePC" />
-
   <connectionStrings>
-    <add name="HomePC" connectionString="Data Source=orcl;User ID=hr;Unicode=True;Load Balance Timeout=50;Password=oracle;pooling=true; max pool size = 150"
-        providerName="System.Data.OracleClient" />
+    <add name="HomePC" connectionString="Data Source=orcl;User ID=hr;Unicode=True;Load Balance Timeout=50;Password=oracle;pooling=true; max pool size = 150" providerName="System.Data.OracleClient" />
   </connectionStrings>
-
   <appSettings>
-    <add key="TuitionBase" value="HomePC"/>
-    <add key ="Branch" value ="TestBranch"/>
-    <add key ="DefaultUser" value ="TestUser"/>
-    <add key ="User" value ="ADMIN"/>
-    <add key ="InsertErr" value="Problem in Inserting following :\n"/>
-    <add key ="UpdateErr" value="Problem in Updating following :\n"/>
-    <add key ="DeleteErr" value="Problem in Deleting following :\n"/>
-    <add key ="TimeStampErr" value="Timestamp Error :\n"/>
-    
+    <add key="TuitionBase" value="HomePC" />
+    <add key="Branch" value="TestBranch" />
+    <add key="DefaultUser" value="TestUser" />
+    <add key="User" value="ADMIN" />
+    <add key="InsertErr" value="Problem in Inserting following :\n" />
+    <add key="UpdateErr" value="Problem in Updating following :\n" />
+    <add key="DeleteErr" value="Problem in Deleting following :\n" />
+    <add key="TimeStampErr" value="Timestamp Error :\n" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
